Update to Appendix 3
Longevity instructions

--- a/app3.qmd
+++ b/app3.qmd
@@ -540,7 +540,7 @@ Many measures of reproductive success have been poorly defined in the literature
 
 ### [Life Span and Survivorship]{style="color:blue;"} {#sec-app3-demography-life}
 
-Ensure that you report only sound measures of survivorship (e.g., mark–recapture or band recovery). With rare exceptions (e.g., species like the Florida Scrub-Jay in which the precise fate of every individual of the population is known), survival estimates based on any methods that do not incorporate these statistical procedures are not valid because they do not differentiate sighting probabilities from mortality probabilities and do not consider annual variation in survival.
+Ensure that you report only sound measures of survivorship (e.g., mark–recapture or band recapture, resighting, or recovery). With rare exceptions (e.g., species like the Florida Scrub-Jay in which the precise fate of every individual of the population is known), survival estimates based on any methods that do not incorporate these statistical procedures are not valid because they do not differentiate sighting probabilities from mortality probabilities and do not consider annual variation in survival.
 
 As a minimum, a contributor should indicate how survival rates were calculated, but it would be better to exclude invalid data; no data are always better than wrong data. Even with sound statistics, some estimates have their limitations. For example, mark–recapture data always confound emigration with mortality. Thus, it is always necessary to indicate how the rates were calculated.
 
