Updates to scientific name guidance

--- a/app3.qmd
+++ b/app3.qmd
@@ -98,7 +98,7 @@ Give the total mass (in g), classified when possible by sex, age, time of year, 
 
 ### [Systematics History]{style="color:blue;"} {#sec-app3-systematics-history}
 
-This section should aim to encompass the taxonomic history of the species, focusing principally on publications since the relevant volume of the Peters Checklist. This also is the section in which to discuss any data that might conflict with the current taxonomy of the species or of the genus, e.g., to highlight genetic or other research that may, in the future, lead to different arrangements. Mention, where relevant, taxonomic discrepancies at the species level between the four main world lists (differences in subspecific approach should be included under Subspecies, below). If the species has recently been split or lumped, this is also the section in which to briefly discuss what taxon/taxa it was split from, or what taxon/taxa it was lumped with, as well as any relevant data that led to the change.
+This section should aim to encompass the taxonomic history of the species, focusing principally on publications since the relevant volume of the Peters Checklist, including any relevant discussions of scientific name synonymies or debate on scientific name validity. This also is the section in which to discuss any data that might conflict with the current taxonomy of the species or of the genus, e.g., to highlight genetic or other research that may, in the future, lead to different arrangements. Mention, where relevant, taxonomic discrepancies at the species level between the four main world lists (differences in subspecific approach should be included under Subspecies, below). If the species has recently been split or lumped, this is also the section in which to briefly discuss what taxon/taxa it was split from, or what taxon/taxa it was lumped with, as well as any relevant data that led to the change.
 
 **For monotypic species**, this section is the place to record the original combination (i.e., original genus and species name when the taxon was first described), author, and year of publication, place (book/journal, including volume and page numbers) of publication, type locality, and information concerning type specimen(s) (collector, date of collection, museum, and reference to type catalogue). (**For polytypic species**, this information will go into the Subspecies section.) In cases in which the original description is available online at a potentially stable URL (e.g., Biodiversity Heritage Library), it is useful to link to this. Many museum type catalogs are available at Biodiversity Heritage Library, but not all, and some large institutions still lack such works, or they are only partly complete. For sample formats, see below. Where possible/appropriate, please also present the same information for any well-recognized synonyms. It is also useful to link to the Wikipedia page (or another reasonably permanent source) for the collector. Include the person’s years of life if known.
 
@@ -594,7 +594,9 @@ A general summation of the species’ relationship with humans and brief mention
 
 ### [Vernacular Names]{style="color:blue;"} {#sec-app3-humans-vernacular}
 
-List vernacular names for a given species that are used within its range, ordered alphabetically by language, and discuss their etymology and usage. [Avibase](https://avibase.bsc-eoc.org/avibase.jsp?lang=EN) is an excellent starting place to look for such names. Also mention other regularly/widely used common names for either the same taxonomic arrangement or other widely recognized arrangements, e.g., in regional field guides and other major checklists. One of the main aims should be to eliminate confusion in the minds of readers that is promoted by using different vernacular names. It is not necessary to provide information concerning the etymology of the scientific names, as information from James Jobling’s *Dictionary of Scientific Bird Names* is available by clicking the “i” icon next to the species’ name at the top of the page.
+List vernacular names for a given species that are used within its range, ordered alphabetically by language, and discuss their etymology and usage. [Avibase](https://avibase.bsc-eoc.org/avibase.jsp?lang=EN) is an excellent starting place to look for such names. Also mention other regularly/widely used common names for either the same taxonomic arrangement or other widely recognized arrangements, e.g., in regional field guides and other major checklists. One of the main aims should be to eliminate confusion in the minds of readers that is promoted by using different vernacular names.
+
+**Note:** It is not necessary to provide information concerning the etymology of the scientific names, as information from James Jobling’s *Dictionary of Scientific Bird Names* is available by clicking the “i” icon next to the species’ name at the top of the page. If you would like to include information on scientific names that is not provided by Jobling, please add it to the @sec-app3-systematics-history section.
 
 Note that a generic list of common names in other languages is provided in the account as a pop-up on the Introduction page (under “Names” next to the species’ conservation status); however, it is not comprehensive, nor is it necessarily representative of all the relevant names and languages within the species’ range. This list is maintained by eBird, and any proposed additions or changes should be referred to that project.
 
