--- a/background.qmd
+++ b/background.qmd
@@ -6,7 +6,7 @@ editor_options:
 
 # Background Information {#sec-background .unnumbered}
 
-**Please review [Appendix 1](https://birds-of-the-world.github.io/birds-of-the-world/app1.html)** for all policies regarding authorship, conduct, and content. It is assumed that contributors have read and will abide by these policies and have signed the BOW [**Contributor Agreement**](https://drive.google.com/file/d/1Arz8mqAamqQFlIfV2zNJFQbbB5Y0D4Ug/view?usp=sharing) before beginning their revision.
+**Please review [**Appendix 1**](https://birds-of-the-world.github.io/birds-of-the-world/app1.html) for all policies regarding authorship, conduct, and content. It is assumed that contributors have read and will abide by these policies and have signed the BOW [**Contributor Agreement**](https://drive.google.com/file/d/1Arz8mqAamqQFlIfV2zNJFQbbB5Y0D4Ug/view?usp=sharing) before beginning their revision.**
 
 BOW contributors do not receive financial compensation for their work, although they do receive *gratis* access to BOW. 
 
