--- a/app5.qmd
+++ b/app5.qmd
@@ -68,6 +68,11 @@ Reference format generally follows that used by *Ornithology*, *Ornithological A
 
 ## Notes {#sec-app5-notes}
 
+-   When citing a specimen record, an eBird checklist, or a xeno-canto recording, please use the following format (note the hyperlinks). Note that these are not formal references and therefore should **not** be added to the bibliography:
+    -   A female collected on 9 June had the bursa 4 × 2 mm and skull 50% ossified (University of Kansas Biodiversity Institute [KU 131737](http://portal.vertnet.org/o/ku/birds?id=429a80fd-5e77-4057-89fe-fe834d081699)).
+    -   In Halmahera, it also gives more downslurred buzzy shrills, each about 0.4–0.5 s, pitch ca. 6.0–7.2 kHz (M. Anderson, xeno-canto: [XC497728](http://www.xeno-canto.org/497728)).
+    -   There are two extralimital records. The first was an undocumented sighting record from Gili Trawangan (F. Dijkstra, eBird: [S68127960](https://ebird.org/checklist/S68127960?__hstc=65717809.0274d9e08ce2df9359e606762fab2b07.1652279465096.1659012084903.1659014944969.260&__hssc=65717809.34.1659014944969&__hsfp=868227580)).
+    -   The Chilean Pigeon has been observed bathing in shallow water (D. Ghigliotto, iNaturalist: [149930529](https://inaturalist.mma.gob.cl/observations/149930529)).
 -   Capitalization of titles in English:
     -   For titles of journal articles and technical reports, capitalize only the first word of the title, the first word after a colon or dash, proper nouns, and common names of birds (except words after a hyphen) (including names not recognized by the eBird/Clements checklist).
     -   Note that all parts of common name should be capitalized when listing multiple bird species (e.g., use “Magnolia and Black-throated Blue Warblers” instead of “Magnolia and Black-throated Blue warblers”).
