Update to Appendix 1 about HBW authors

--- a/app1.qmd
+++ b/app1.qmd
@@ -38,6 +38,8 @@ When unpublished data or observations from previous authors are retained in new 
 
 To maintain authorship status, authors are encouraged to actively participate in updates to their work over multiple versions. Engaged contributors in good standing can consult with BOW staff regarding the timing and implementation of future updates to their accounts.
 
+Content created under contract with HBW was completed and compensated according to those original agreements. Those contractual obligations were concluded with HBW and do not transfer to BOW. While BOW greatly values the expertise of these authors and welcomes their continued involvement, BOW is not obligated to include former HBW-contracted authors in content revisions. Former HBW authors will need to be an active contributor to be involved in future work on the project, and any new contributions to BOW by former HBW-contracted authors would be considered voluntary and subject to the volunteer contributor policies.
+
 ## 3. Maintaining Status as an "Active" Contributor {#sec-app1-active}
 
 Beginning in 2025, contributors must review and renew their Contributor Information Form ([English](https://forms.gle/C3MySs5DtQZ1NR6b8), [Spanish](https://forms.gle/EZes93EWtmtrvtXi7)) and associated [Contributor Agreement](https://drive.google.com/file/d/1Arz8mqAamqQFlIfV2zNJFQbbB5Y0D4Ug/view?usp=sharing) every two years to maintain “active” contributor status. Active contributors can consult on how and when their work is updated, and BOW editors will make every reasonable effort to accommodate their preferences and facilitate their continued involvement with the project. 
